// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeDialogTableActionOptions should normalize complex dialog table action options 1`] = `
{
  "actionList": [
    {
      "color": null,
      "label": "Cancel",
      "role": "close",
    },
    {
      "color": null,
      "label": "Submit",
      "role": "submit",
    },
  ],
  "backend": {
    "kind": "none",
  },
  "checkFunction": null,
  "color": null,
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": null,
  "cssClass": null,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "icon": "visibility",
  "inHeader": false,
  "kind": "dialog",
  "name": "view",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "priority": 0,
  "project": "ui-lib",
  "refresh": false,
  "replace": false,
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "title": "View User",
  "tooltip": "View",
  "type": "view",
  "withoutBody": false,
}
`;

exports[`NormalizeDialogTableActionOptions should normalize minimal dialog table action options 1`] = `
{
  "actionList": [
    {
      "color": null,
      "label": "Cancel",
      "role": "close",
    },
    {
      "color": null,
      "label": "Submit",
      "role": "submit",
    },
  ],
  "backend": {
    "kind": "none",
  },
  "checkFunction": null,
  "color": null,
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": null,
  "cssClass": null,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "icon": null,
  "inHeader": false,
  "kind": "dialog",
  "name": "edit",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "priority": 0,
  "project": "ui-lib",
  "refresh": false,
  "replace": false,
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "title": "View User",
  "tooltip": "Edit",
  "type": "edit",
  "withoutBody": false,
}
`;
